backend-email-service/kubernetes/api-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-proxy-deployment
  labels:
    app: api-proxy
spec:
  replicas: 1 # This can be scaled normally or with KEDA if needed
  selector:
    matchLabels:
      app: api-proxy
  template:
    metadata:
      labels:
        app: api-proxy
    spec:
      containers:
      - name: api-proxy
        image: your-docker-repo/api-proxy:latest # Replace with your image
        ports:
        - containerPort: 5000
