backend-email-service/kubernetes/email-sender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-sender-deployment
  labels:
    app: email-sender
spec:
  replicas: 0 # KEDA will manage this
  selector:
    matchLabels:
      app: email-sender
  template:
    metadata:
      labels:
        app: email-sender
    spec:
      containers:
      - name: email-sender
        image: your-docker-repo/email-sender:latest # Replace with your image
