backend-email-service/kubernetes/api-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-proxy-service
spec:
  selector:
    app: api-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
